--- a/jsf/java-jsf-i/livraria/src/main/webapp/WEB-INF/web.xml
+++ b/jsf/java-jsf-i/livraria/src/main/webapp/WEB-INF/web.xml
@@ -1,36 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+<web-app version="3.1"
+  xmlns="http://xmlns.jcp.org/xml/ns/javaee"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
-         http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-  version="3.1">
-
-  <session-config>
-    <cookie-config>
-      <http-only>true</http-only>
-    </cookie-config>
-    <tracking-mode>COOKIE</tracking-mode>
-  </session-config>
-
-  <welcome-file-list>
-    <welcome-file>/index.xhtml</welcome-file>
-  </welcome-file-list>
+  xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee           http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
   <context-param>
     <param-name>com.sun.faces.numberOfViewsInSession</param-name>
     <param-value>5</param-value>
   </context-param>
-
   <context-param>
     <param-name>com.sun.faces.serializeServerState</param-name>
     <param-value>false</param-value>
   </context-param>
   <context-param>
-    <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-    <param-value>server</param-value>
-  </context-param>
-  <context-param>
-    <param-name>javax.faces.PROJECT_STAGE</param-name>
-    <param-value>Production</param-value>
+    <param-name>javax.faces.CONFIG_FILES</param-name>
+    <param-value>/WEB-INF/faces-config.xml</param-value>
   </context-param>
   <context-param>
     <param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
@@ -41,37 +24,21 @@
     <param-value>true</param-value>
   </context-param>
   <context-param>
-    <param-name>primefaces.PRIVATE_CAPTCHA_KEY</param-name>
-    <param-value>6Lf2XQkTAAAAAHsc1-7Mt_kMlmcmGqlxoMDJlp2K</param-value>
+    <param-name>javax.faces.PROJECT_STAGE</param-name>
+    <param-value>Production</param-value>
   </context-param>
   <context-param>
-    <param-name>primefaces.PUBLIC_CAPTCHA_KEY</param-name>
-    <param-value>6Lf2XQkTAAAAANcvOwYqPxWL4iZDksFqHpS39GDA</param-value>
+    <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+    <param-value>server</param-value>
   </context-param>
-
+  <context-param>
+    <param-name>primefaces.CACHE_PROVIDER</param-name>
+    <param-value>org.primefaces.cache.EHCacheProvider</param-value>
+  </context-param>
   <context-param>
     <param-name>primefaces.CLIENT_SIDE_VALIDATION</param-name>
     <param-value>true</param-value>
   </context-param>
-  <!-- 
-   "afterdark", "afternoon", "afterwork", "aristo",
-                "black-tie", "blitzer", "bluesky", "bootstrap", "casablanca",
-                "cupertino", "cruze", "dark-hive", "delta", "dot-luv",
-                "eggplant", "excite-bike", "flick", "glass-x", "home",
-                "hot-sneaks", "humanity", "le-frog", "midnight", "mint-choc",
-                "overcast", "pepper-grinder", "redmond", "rocket", "sam",
-                "smoothness", "south-street", "start", "sunny", "swanky-purse",
-                "trontastic", "ui-darkness", "ui-lightness", "vader" 
-  
-  <context-param>
-    <param-name>primefaces.THEME</param-name>
-    <param-value>#{guestPreferences.theme}</param-value>
-  </context-param>
-   -->
-  <context-param>
-    <param-name>primefaces.THEME</param-name>
-    <param-value>redmond</param-value>
-  </context-param> 
   <context-param>
     <param-name>primefaces.FONT_AWESOME</param-name>
     <param-value>true</param-value>
@@ -80,34 +47,44 @@
     <param-name>primefaces.MOVE_SCRIPTS_TO_BOTTOM</param-name>
     <param-value>true</param-value>
   </context-param>
-
   <context-param>
-    <param-name>primefaces.CACHE_PROVIDER</param-name>
-    <param-value>org.primefaces.cache.EHCacheProvider</param-value>
+    <param-name>primefaces.PRIVATE_CAPTCHA_KEY</param-name>
+    <param-value>6Lf2XQkTAAAAAHsc1-7Mt_kMlmcmGqlxoMDJlp2K</param-value>
   </context-param>
-  <listener>
-    <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
-  </listener>
-
-  <listener>
-    <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
-  </listener>
-
+  <context-param>
+    <param-name>primefaces.PUBLIC_CAPTCHA_KEY</param-name>
+    <param-value>6Lf2XQkTAAAAANcvOwYqPxWL4iZDksFqHpS39GDA</param-value>
+  </context-param>
+  <!-- "afterdark", "afternoon", "afterwork", "aristo", "black-tie", "blitzer", 
+    "bluesky", "bootstrap", "casablanca", "cupertino", "cruze", "dark-hive", 
+    "delta", "dot-luv", "eggplant", "excite-bike", "flick", "glass-x", "home", 
+    "hot-sneaks", "humanity", "le-frog", "midnight", "mint-choc", "overcast", 
+    "pepper-grinder", "redmond", "rocket", "sam", "smoothness", "south-street", 
+    "start", "sunny", "swanky-purse", "trontastic", "ui-darkness", "ui-lightness", 
+    "vader" <context-param> <param-name>primefaces.THEME</param-name> <param-value>#{guestPreferences.theme}</param-value> 
+    </context-param> -->
+  <context-param>
+    <param-name>primefaces.THEME</param-name>
+    <param-value>redmond</param-value>
+  </context-param>
   <filter>
     <filter-name>Character Encoding Filter</filter-name>
     <filter-class>br.com.caelum.jsf.filters.CharacterEncodingFilter</filter-class>
   </filter>
-
   <filter-mapping>
     <filter-name>Character Encoding Filter</filter-name>
     <servlet-name>Faces Servlet</servlet-name>
   </filter-mapping>
-
+  <listener>
+    <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
+  </listener>
+  <listener>
+    <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
+  </listener>
   <servlet>
     <servlet-name>Faces Servlet</servlet-name>
     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
   </servlet>
-
   <servlet-mapping>
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.jsf</url-pattern>
@@ -116,20 +93,12 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.xhtml</url-pattern>
   </servlet-mapping>
-
-  <error-page>
-    <exception-type>java.lang.Throwable</exception-type>
-    <location>/error/error.xhtml</location>
-  </error-page>
-  <error-page>
-    <exception-type>javax.faces.application.ViewExpiredException</exception-type>
-    <location>/error/viewExpired.xhtml</location>
-  </error-page>
-  <error-page>
-    <error-code>404</error-code>
-    <location>/error/404.xhtml</location>
-  </error-page>
-
+  <session-config>
+    <cookie-config>
+      <http-only>true</http-only>
+    </cookie-config>
+    <tracking-mode>COOKIE</tracking-mode>
+  </session-config>
   <mime-mapping>
     <extension>ttf</extension>
     <mime-type>application/font-sfnt</mime-type>
@@ -174,5 +143,23 @@
     <extension>svg#fontawesomeregular</extension>
     <mime-type>image/svg+xml</mime-type>
   </mime-mapping>
-
+  <welcome-file-list>
+    <welcome-file>/index.xhtml</welcome-file>
+  </welcome-file-list>
+  <error-page>
+    <exception-type>java.lang.Throwable</exception-type>
+    <location>/error/error.xhtml</location>
+  </error-page>
+  <error-page>
+    <exception-type>javax.faces.application.ViewExpiredException</exception-type>
+    <location>/error/viewExpired.xhtml</location>
+  </error-page>
+  <error-page>
+    <error-code>404</error-code>
+    <location>/error/404.xhtml</location>
+  </error-page>
+  <resource-env-ref>
+    <resource-env-ref-name>BeanManager</resource-env-ref-name>
+    <resource-env-ref-type>javax.enterprise.inject.spi.BeanManager</resource-env-ref-type>
+  </resource-env-ref>
 </web-app>
