:see_no_evil: Adiciona Nova Expressão de Exclusão de Versionamento.

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ target
 .sts4-cache/
 .project
 .classpath
+.faces-config.xml.jsfdia
 
 # End of https://www.toptal.com/developers/gitignore/api/eclipse
 
